# transcribe-cli

./: .env.example  .gitattributes  .gitignore  .npmignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  install.sh  package-lock.json  package.json  pyproject.toml  tsconfig.json
.aiwg/architecture/: architecture-sketch.md  software-architecture-doc.md
.aiwg/frameworks/: registry.json
.aiwg/intake/: option-matrix.md  project-intake.md  solution-profile.md
.aiwg/management/: business-case.md
.aiwg/planning/: construction-phase-plan.md  elaboration-phase-plan.md  transition-phase-plan.md  v2-multi-speaker-workorders.md
.aiwg/ralph/: completion-20260311-wo1-wo8.md
.aiwg/reports/: abm-report.md  construction-kickoff-report.md  inception-completion-report.md  lom-report.md
.aiwg/requirements/: non-functional-requirements.md  vision-document.md
.aiwg/risks/: risk-list.md  risk-retirement-report.md
.aiwg/security/: data-classification.md
.aiwg/testing/: master-test-plan.md
.claude/: settings.json
.claude/agents/: acquisition-agent.md  agentsmith.md  api-designer.md  architecture-designer.md  archival-agent.md  citation-agent.md  citation-verifier.md  code-reviewer.md  commandsmith.md  compliance-checker.md  container-analyst.md  context-librarian.md  cost-optimizer.md  debugger.md  deployment-manager.md  devops-engineer.md  discography-analyst.md  discovery-agent.md  documentation-agent.md  documentation-archivist.md  documentation-synthesizer.md  domain-expert.md  executive-orchestrator.md  laziness-detector.md  log-analyst.md  mcpsmith.md  metrics-analyst.md  migration-planner.md  mutation-analyst.md  network-analyst.md  performance-engineer.md  persistence-hunter.md  progress-tracker.md  prompt-reinforcement.md  provenance-agent.md  provenance-manager.md  quality-agent.md  quality-assessor.md  ralph-loop.md  ralph-verifier.md  (+21 more)
.claude/commands/: acquire.md  address-issues.md  aiwg-kb.md  aiwg-refresh.md  aiwg-regenerate-agents.md  aiwg-regenerate-claude.md  aiwg-regenerate-copilot.md  aiwg-regenerate-cursorrules.md  aiwg-regenerate-factory.md  aiwg-regenerate-warp.md  aiwg-regenerate-windsurfrules.md  aiwg-regenerate.md  aiwg-setup-project.md  aiwg-setup-warp.md  aiwg-update-agents-md.md  aiwg-update-claude.md  aiwg-update-warp.md  analyze-artist.md  assemble.md  asset-production.md  brand-audit.md  brand-review.md  budget-review.md  build-artifact-index.md  build-poc.md  campaign-analytics.md  campaign-kickoff.md  check-completeness.md  check-traceability.md  citation-check.md  codebase-health.md  commit-and-push.md  competitive-analysis.md  complexity-gate.md  content-planning.md  corpus-health.md  create-prd.md  creative-brief.md  (+127 more)
lib/: bridge.ts  index.ts  live.ts  transcriber.ts  types.ts
scripts/: bridge.py  live_worker.py  postinstall.js
tests/: __init__.py
(+114 files in other folders)
